<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        style="@style/resultStyle"
        android:text="@string/result"/>

    <TableLayout
        android:id="@+id/tableLayout"
        style="@style/tableLayoutStyle">

        <TableRow style="@style/tableRowStyle">

            <Button
                android:id="@+id/btnAC"
                style="@style/buttonStyle"
                android:text="@string/ac" />

            <Button
                android:id="@+id/btnSign"
                style="@style/buttonStyle"
                android:text="@string/sign" />

            <Button
                android:id="@+id/btnMod"
                style="@style/buttonStyle"
                android:text="@string/mod" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/buttonStyle.two"
                android:text="@string/divide" />
        </TableRow>

        <TableRow style="@style/tableRowStyle">

            <Button
                android:id="@+id/btn7"
                style="@style/buttonStyle"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btn8"
                style="@style/buttonStyle"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn9"
                style="@style/buttonStyle"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/buttonStyle.two"
                android:text="@string/multiply" />

        </TableRow>

        <TableRow style="@style/tableRowStyle">

            <Button
                android:id="@+id/btn4"
                style="@style/buttonStyle"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btn5"
                style="@style/buttonStyle"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btn6"
                style="@style/buttonStyle"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btnMinus"
                style="@style/buttonStyle.two"
                android:text="@string/minus" />
        </TableRow>

        <TableRow style="@style/tableRowStyle">

            <Button
                android:id="@+id/btn1"
                style="@style/buttonStyle"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btn2"
                style="@style/buttonStyle"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btn3"
                style="@style/buttonStyle"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnPlus"
                style="@style/buttonStyle.two"
                android:text="@string/plus" />
        </TableRow>

        <TableRow style="@style/tableRowStyle">

            <Button
                android:id="@+id/btn0"
                style="@style/buttonStyle"
                android:layout_column="0"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btnPoint"
                style="@style/buttonStyle"
                android:layout_column="2"
                android:text="@string/point" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/buttonStyle.two"
                android:layout_column="3"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>

</RelativeLayout>